Fixed #49 Overflow issues

--- a/style.css
+++ b/style.css
@@ -325,6 +325,8 @@ textarea {
 	font-size: 16px;
 	line-height: 1.75;
 	text-align: left;
+    -ms-word-wrap: break-word;
+    word-wrap: break-word;
 }
 
 h1,
@@ -1412,10 +1414,6 @@ h2.comments-title {
 	color: #575756;
 }
 
-.comment-content a {
-	word-wrap: break-word;
-}
-
 .comment-content p {
 	margin-bottom: 1em;
 }
@@ -1647,7 +1645,7 @@ object {
     margin: 25px 0;
     display: inline-block;
     margin: 0;
-    padding: 0;
+	max-width: 100%;
 }
 
 .site-title a {
